// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingOverlay adds class "visible" when nextProps include a loadingState with a value of true 1`] = `
<div
  className="LoadingOverlay"
>
  <span
    className="loader"
  />
</div>
`;

exports[`LoadingOverlay does not have class "visible" when all loading states are false (connected) 1`] = `
<div
  className="LoadingOverlay"
>
  <span
    className="loader"
  />
</div>
`;

exports[`LoadingOverlay does not have class "visible" when all loading states are false 1`] = `
<div
  className="LoadingOverlay"
>
  <span
    className="loader"
  />
</div>
`;

exports[`LoadingOverlay has class "visible" when some loading states are true 1`] = `
<div
  className="LoadingOverlay visible"
>
  <span
    className="loader"
  />
</div>
`;
